reference/5.1/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=390787
Help Version: 5.2.0.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 8599ac6b6d6449e72eb76156cbe34de469fcfa1e
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: sv-SE
ms.lasthandoff: 10/07/2020
ms.locfileid: "93269673"
---
# <span data-ttu-id="79a35-103">Microsoft. PowerShell. Utility-modul</span><span class="sxs-lookup"><span data-stu-id="79a35-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="79a35-104">Beskrivning</span><span class="sxs-lookup"><span data-stu-id="79a35-104">Description</span></span>

<span data-ttu-id="79a35-105">Det här avsnittet innehåller hjälp avsnitten för de cmdlet: ar som installeras med Microsoft. PowerShell. Utility-modulen.</span><span class="sxs-lookup"><span data-stu-id="79a35-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="79a35-106">Den här modulen innehåller cmdletar som hanterar de grundläggande funktionerna i PowerShell.</span><span class="sxs-lookup"><span data-stu-id="79a35-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="79a35-107">Cmdletar för Microsoft. PowerShell. Utility</span><span class="sxs-lookup"><span data-stu-id="79a35-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="79a35-108">Lägg till medlem</span><span class="sxs-lookup"><span data-stu-id="79a35-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="79a35-109">Lägger till anpassade egenskaper och metoder till en instans av ett PowerShell-objekt.</span><span class="sxs-lookup"><span data-stu-id="79a35-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="79a35-110">Lägg till typ</span><span class="sxs-lookup"><span data-stu-id="79a35-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="79a35-111">Lägger till en Microsoft .NET Framework-klass till en PowerShell-session.</span><span class="sxs-lookup"><span data-stu-id="79a35-111">Adds a Microsoft .NET Framework class to a PowerShell session.</span></span>

### [<span data-ttu-id="79a35-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="79a35-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="79a35-113">Tar bort värdet för en variabel.</span><span class="sxs-lookup"><span data-stu-id="79a35-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="79a35-114">Jämför objekt</span><span class="sxs-lookup"><span data-stu-id="79a35-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="79a35-115">Jämför två objekt uppsättningar.</span><span class="sxs-lookup"><span data-stu-id="79a35-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="79a35-116">Convert-String</span><span class="sxs-lookup"><span data-stu-id="79a35-116">Convert-String</span></span>](Convert-String.md)
<span data-ttu-id="79a35-117">Formaterar en sträng för att matcha exempel.</span><span class="sxs-lookup"><span data-stu-id="79a35-117">Formats a string to match examples.</span></span>

### [<span data-ttu-id="79a35-118">ConvertFrom-CSV</span><span class="sxs-lookup"><span data-stu-id="79a35-118">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="79a35-119">Konverterar objekt egenskaper i CSV-format (kommaavgränsat värde) till CSV-versioner av de ursprungliga objekten.</span><span class="sxs-lookup"><span data-stu-id="79a35-119">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="79a35-120">ConvertFrom – JSON</span><span class="sxs-lookup"><span data-stu-id="79a35-120">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="79a35-121">Konverterar en JSON-formaterad sträng till ett anpassat objekt.</span><span class="sxs-lookup"><span data-stu-id="79a35-121">Converts a JSON-formatted string to a custom object.</span></span>

### [<span data-ttu-id="79a35-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="79a35-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="79a35-123">Konverterar en SDDL-sträng till ett anpassat objekt.</span><span class="sxs-lookup"><span data-stu-id="79a35-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="79a35-124">ConvertFrom-sträng</span><span class="sxs-lookup"><span data-stu-id="79a35-124">ConvertFrom-String</span></span>](ConvertFrom-String.md)
<span data-ttu-id="79a35-125">Extraherar och tolkar strukturerade egenskaper från sträng innehåll.</span><span class="sxs-lookup"><span data-stu-id="79a35-125">Extracts and parses structured properties from string content.</span></span>

### [<span data-ttu-id="79a35-126">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="79a35-126">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="79a35-127">Konverterar en sträng som innehåller ett eller flera nyckel-och värdepar till en hash-tabell.</span><span class="sxs-lookup"><span data-stu-id="79a35-127">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="79a35-128">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="79a35-128">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="79a35-129">Konverterar .NET-objekt till en serie kommaavgränsade värde strängar (CSV).</span><span class="sxs-lookup"><span data-stu-id="79a35-129">Converts .NET objects into a series of comma-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="79a35-130">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="79a35-130">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="79a35-131">Konverterar .NET-objekt till HTML som kan visas i en webbläsare.</span><span class="sxs-lookup"><span data-stu-id="79a35-131">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="79a35-132">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="79a35-132">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="79a35-133">Konverterar ett objekt till en JSON-formaterad sträng.</span><span class="sxs-lookup"><span data-stu-id="79a35-133">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="79a35-134">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="79a35-134">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="79a35-135">Skapar en XML-baserad representation av ett objekt.</span><span class="sxs-lookup"><span data-stu-id="79a35-135">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="79a35-136">Felsök – körnings utrymme</span><span class="sxs-lookup"><span data-stu-id="79a35-136">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="79a35-137">Startar en interaktiv felsökningssession med en körnings utrymme.</span><span class="sxs-lookup"><span data-stu-id="79a35-137">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="79a35-138">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="79a35-138">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="79a35-139">Inaktiverar Bryt punkterna i den aktuella konsolen.</span><span class="sxs-lookup"><span data-stu-id="79a35-139">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="79a35-140">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="79a35-140">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="79a35-141">Inaktiverar fel sökning på en eller flera körnings utrymmen och släpper eventuella väntande fel söknings program.</span><span class="sxs-lookup"><span data-stu-id="79a35-141">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="79a35-142">Aktivera – PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="79a35-142">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="79a35-143">Aktiverar Bryt punkterna i den aktuella konsolen.</span><span class="sxs-lookup"><span data-stu-id="79a35-143">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="79a35-144">Aktivera – RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="79a35-144">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="79a35-145">Aktiverar fel sökning på körnings utrymmen där en Bryt punkt bevaras tills en fel sökare är ansluten.</span><span class="sxs-lookup"><span data-stu-id="79a35-145">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="79a35-146">Exportera-alias</span><span class="sxs-lookup"><span data-stu-id="79a35-146">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="79a35-147">Exporterar information om aktuella definierade alias till en fil.</span><span class="sxs-lookup"><span data-stu-id="79a35-147">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="79a35-148">Exportera – CliXml</span><span class="sxs-lookup"><span data-stu-id="79a35-148">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="79a35-149">Skapar en XML-baserad representation av ett objekt eller objekt och lagrar det i en fil.</span><span class="sxs-lookup"><span data-stu-id="79a35-149">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="79a35-150">Exportera-CSV</span><span class="sxs-lookup"><span data-stu-id="79a35-150">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="79a35-151">Konverterar objekt till en serie med kommaavgränsade värde strängar (CSV) och sparar strängarna i en fil.</span><span class="sxs-lookup"><span data-stu-id="79a35-151">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="79a35-152">Exportera – FormatData</span><span class="sxs-lookup"><span data-stu-id="79a35-152">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="79a35-153">Sparar formatering av data från den aktuella sessionen i en format fil.</span><span class="sxs-lookup"><span data-stu-id="79a35-153">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="79a35-154">Exportera – PSSession</span><span class="sxs-lookup"><span data-stu-id="79a35-154">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="79a35-155">Exporterar kommandon från en annan session och sparar dem i en PowerShell-modul.</span><span class="sxs-lookup"><span data-stu-id="79a35-155">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="79a35-156">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="79a35-156">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="79a35-157">Använder en anpassad vy för att formatera utdata.</span><span class="sxs-lookup"><span data-stu-id="79a35-157">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="79a35-158">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="79a35-158">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="79a35-159">Visar en fil eller andra indata som hexadecimala.</span><span class="sxs-lookup"><span data-stu-id="79a35-159">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="79a35-160">Format-List</span><span class="sxs-lookup"><span data-stu-id="79a35-160">Format-List</span></span>](Format-List.md)
<span data-ttu-id="79a35-161">Formaterar utdata som en lista med egenskaper där varje egenskap visas på en ny rad.</span><span class="sxs-lookup"><span data-stu-id="79a35-161">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="79a35-162">Format-Table</span><span class="sxs-lookup"><span data-stu-id="79a35-162">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="79a35-163">Formaterar utdata som en tabell.</span><span class="sxs-lookup"><span data-stu-id="79a35-163">Formats the output as a table.</span></span>

### [<span data-ttu-id="79a35-164">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="79a35-164">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="79a35-165">Formaterar objekt som en bred tabell som endast visar en egenskap för varje objekt.</span><span class="sxs-lookup"><span data-stu-id="79a35-165">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="79a35-166">Get-alias</span><span class="sxs-lookup"><span data-stu-id="79a35-166">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="79a35-167">Hämtar alias för den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="79a35-167">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="79a35-168">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="79a35-168">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="79a35-169">Hämtar den aktuella kulturen som angetts i operativ systemet.</span><span class="sxs-lookup"><span data-stu-id="79a35-169">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="79a35-170">Hämta datum</span><span class="sxs-lookup"><span data-stu-id="79a35-170">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="79a35-171">Hämtar aktuellt datum och aktuell tid.</span><span class="sxs-lookup"><span data-stu-id="79a35-171">Gets the current date and time.</span></span>

### [<span data-ttu-id="79a35-172">Hämta händelse</span><span class="sxs-lookup"><span data-stu-id="79a35-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="79a35-173">Hämtar händelserna i händelse kön.</span><span class="sxs-lookup"><span data-stu-id="79a35-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="79a35-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="79a35-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="79a35-175">Hämtar händelse prenumeranterna i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="79a35-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="79a35-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="79a35-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="79a35-177">Beräknar hash-värdet för en fil med hjälp av en angiven hash-algoritm.</span><span class="sxs-lookup"><span data-stu-id="79a35-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="79a35-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="79a35-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="79a35-179">Hämtar formaterings data i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="79a35-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="79a35-180">Hämta värd</span><span class="sxs-lookup"><span data-stu-id="79a35-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="79a35-181">Hämtar ett objekt som representerar det aktuella värd programmet.</span><span class="sxs-lookup"><span data-stu-id="79a35-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="79a35-182">Hämta medlem</span><span class="sxs-lookup"><span data-stu-id="79a35-182">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="79a35-183">Hämtar egenskaper och metoder för objekt.</span><span class="sxs-lookup"><span data-stu-id="79a35-183">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="79a35-184">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="79a35-184">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="79a35-185">Hämtar de Bryt punkter som har angetts i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="79a35-185">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="79a35-186">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="79a35-186">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="79a35-187">Visar den aktuella anrops stacken.</span><span class="sxs-lookup"><span data-stu-id="79a35-187">Displays the current call stack.</span></span>

### [<span data-ttu-id="79a35-188">Hämta slumpmässiga</span><span class="sxs-lookup"><span data-stu-id="79a35-188">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="79a35-189">Hämtar ett slumpmässigt tal eller väljer objekt slumpmässigt från en samling.</span><span class="sxs-lookup"><span data-stu-id="79a35-189">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="79a35-190">Get-körnings utrymme</span><span class="sxs-lookup"><span data-stu-id="79a35-190">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="79a35-191">Hämtar aktiva körnings utrymmen i en PowerShell-värd process.</span><span class="sxs-lookup"><span data-stu-id="79a35-191">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="79a35-192">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="79a35-192">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="79a35-193">Visar körnings utrymme fel söknings alternativ.</span><span class="sxs-lookup"><span data-stu-id="79a35-193">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="79a35-194">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="79a35-194">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="79a35-195">Hämtar PowerShell-komponenter som instrumenteras för spårning.</span><span class="sxs-lookup"><span data-stu-id="79a35-195">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="79a35-196">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="79a35-196">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="79a35-197">Hämtar utökade typ data i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="79a35-197">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="79a35-198">Get-värdet</span><span class="sxs-lookup"><span data-stu-id="79a35-198">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="79a35-199">Hämtar de aktuella inställningarna för användar gränssnitts kulturen i operativ systemet.</span><span class="sxs-lookup"><span data-stu-id="79a35-199">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="79a35-200">Hämta unika</span><span class="sxs-lookup"><span data-stu-id="79a35-200">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="79a35-201">Returnerar unika objekt från en sorterad lista.</span><span class="sxs-lookup"><span data-stu-id="79a35-201">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="79a35-202">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="79a35-202">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="79a35-203">Hämtar variablerna i den aktuella konsolen.</span><span class="sxs-lookup"><span data-stu-id="79a35-203">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="79a35-204">Get-verb</span><span class="sxs-lookup"><span data-stu-id="79a35-204">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="79a35-205">Hämtar godkända PowerShell-verb.</span><span class="sxs-lookup"><span data-stu-id="79a35-205">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="79a35-206">Gruppera objekt</span><span class="sxs-lookup"><span data-stu-id="79a35-206">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="79a35-207">Grupperar objekt som innehåller samma värde för angivna egenskaper.</span><span class="sxs-lookup"><span data-stu-id="79a35-207">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="79a35-208">Importera-alias</span><span class="sxs-lookup"><span data-stu-id="79a35-208">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="79a35-209">Importerar en aliasresurspost från en fil.</span><span class="sxs-lookup"><span data-stu-id="79a35-209">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="79a35-210">Importera – CliXml</span><span class="sxs-lookup"><span data-stu-id="79a35-210">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="79a35-211">Importerar en CLIXML-fil och skapar motsvarande objekt i PowerShell.</span><span class="sxs-lookup"><span data-stu-id="79a35-211">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="79a35-212">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="79a35-212">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="79a35-213">Skapar tabeller som liknar anpassade objekt från objekten i en fil med kommaavgränsade värden (CSV).</span><span class="sxs-lookup"><span data-stu-id="79a35-213">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="79a35-214">Importera – LocalizedData</span><span class="sxs-lookup"><span data-stu-id="79a35-214">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="79a35-215">Importerar språkspecifika data till skript och funktioner baserat på den användar gränssnitts kultur som valts för operativ systemet.</span><span class="sxs-lookup"><span data-stu-id="79a35-215">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="79a35-216">Importera – PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="79a35-216">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="79a35-217">Importerar värden från en. PSD1-fil utan att anropa innehållet</span><span class="sxs-lookup"><span data-stu-id="79a35-217">Imports values from a .PSD1 file without invoking its contents</span></span>

### [<span data-ttu-id="79a35-218">Importera – PSSession</span><span class="sxs-lookup"><span data-stu-id="79a35-218">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="79a35-219">Importerar kommandon från en annan session till den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="79a35-219">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="79a35-220">Invoke-uttryck</span><span class="sxs-lookup"><span data-stu-id="79a35-220">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="79a35-221">Kör kommandon eller uttryck på den lokala datorn.</span><span class="sxs-lookup"><span data-stu-id="79a35-221">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="79a35-222">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="79a35-222">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="79a35-223">Skickar en HTTP-eller HTTPS-begäran till en RESTful-webbtjänst.</span><span class="sxs-lookup"><span data-stu-id="79a35-223">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="79a35-224">Anropa-webbegäran</span><span class="sxs-lookup"><span data-stu-id="79a35-224">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="79a35-225">Hämtar innehåll från en webb sida på Internet.</span><span class="sxs-lookup"><span data-stu-id="79a35-225">Gets content from a web page on the Internet.</span></span>

### [<span data-ttu-id="79a35-226">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="79a35-226">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="79a35-227">Mäter den tid det tar att köra skript block och cmdlets.</span><span class="sxs-lookup"><span data-stu-id="79a35-227">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="79a35-228">Mått – objekt</span><span class="sxs-lookup"><span data-stu-id="79a35-228">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="79a35-229">Beräknar numeriska egenskaper för objekt, samt tecken, ord och rader i sträng objekt, till exempel filer för text.</span><span class="sxs-lookup"><span data-stu-id="79a35-229">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="79a35-230">Nytt-alias</span><span class="sxs-lookup"><span data-stu-id="79a35-230">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="79a35-231">Skapar ett nytt alias.</span><span class="sxs-lookup"><span data-stu-id="79a35-231">Creates a new alias.</span></span>

### [<span data-ttu-id="79a35-232">Ny händelse</span><span class="sxs-lookup"><span data-stu-id="79a35-232">New-Event</span></span>](New-Event.md)
<span data-ttu-id="79a35-233">Skapar en ny händelse.</span><span class="sxs-lookup"><span data-stu-id="79a35-233">Creates a new event.</span></span>

### [<span data-ttu-id="79a35-234">New-GUID</span><span class="sxs-lookup"><span data-stu-id="79a35-234">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="79a35-235">Skapar ett GUID.</span><span class="sxs-lookup"><span data-stu-id="79a35-235">Creates a GUID.</span></span>

### [<span data-ttu-id="79a35-236">Nytt – objekt</span><span class="sxs-lookup"><span data-stu-id="79a35-236">New-Object</span></span>](New-Object.md)
<span data-ttu-id="79a35-237">Skapar en instans av ett Microsoft .NET Framework-eller COM-objekt.</span><span class="sxs-lookup"><span data-stu-id="79a35-237">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="79a35-238">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="79a35-238">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="79a35-239">Skapar en temporär fil.</span><span class="sxs-lookup"><span data-stu-id="79a35-239">Creates a temporary file.</span></span>

### [<span data-ttu-id="79a35-240">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="79a35-240">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="79a35-241">Skapar ett TimeSpan-objekt.</span><span class="sxs-lookup"><span data-stu-id="79a35-241">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="79a35-242">Ny variabel</span><span class="sxs-lookup"><span data-stu-id="79a35-242">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="79a35-243">Skapar en ny variabel.</span><span class="sxs-lookup"><span data-stu-id="79a35-243">Creates a new variable.</span></span>

### [<span data-ttu-id="79a35-244">Ut-fil</span><span class="sxs-lookup"><span data-stu-id="79a35-244">Out-File</span></span>](Out-File.md)
<span data-ttu-id="79a35-245">Skickar utdata till en fil.</span><span class="sxs-lookup"><span data-stu-id="79a35-245">Sends output to a file.</span></span>

### [<span data-ttu-id="79a35-246">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="79a35-246">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="79a35-247">Skickar utdata till en interaktiv tabell i ett separat fönster.</span><span class="sxs-lookup"><span data-stu-id="79a35-247">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="79a35-248">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="79a35-248">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="79a35-249">Skickar utdata till en skrivare.</span><span class="sxs-lookup"><span data-stu-id="79a35-249">Sends output to a printer.</span></span>

### [<span data-ttu-id="79a35-250">Out-sträng</span><span class="sxs-lookup"><span data-stu-id="79a35-250">Out-String</span></span>](Out-String.md)
<span data-ttu-id="79a35-251">Matar in indata-objekt som en sträng.</span><span class="sxs-lookup"><span data-stu-id="79a35-251">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="79a35-252">Read-Host</span><span class="sxs-lookup"><span data-stu-id="79a35-252">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="79a35-253">Läser en rad med ininformation från-konsolen.</span><span class="sxs-lookup"><span data-stu-id="79a35-253">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="79a35-254">Registrera – EngineEvent</span><span class="sxs-lookup"><span data-stu-id="79a35-254">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="79a35-255">Prenumererar på händelser som genereras av PowerShell-motorn och av `New-Event` cmdleten.</span><span class="sxs-lookup"><span data-stu-id="79a35-255">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="79a35-256">Registrera – ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="79a35-256">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="79a35-257">Prenumererar på händelser som genereras av ett Microsoft .NET Framework-objekt.</span><span class="sxs-lookup"><span data-stu-id="79a35-257">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="79a35-258">Ta bort händelse</span><span class="sxs-lookup"><span data-stu-id="79a35-258">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="79a35-259">Tar bort händelser från händelse kön.</span><span class="sxs-lookup"><span data-stu-id="79a35-259">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="79a35-260">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="79a35-260">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="79a35-261">Tar bort Bryt punkter från den aktuella konsolen.</span><span class="sxs-lookup"><span data-stu-id="79a35-261">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="79a35-262">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="79a35-262">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="79a35-263">Tar bort utökade typer från den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="79a35-263">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="79a35-264">Ta bort variabel</span><span class="sxs-lookup"><span data-stu-id="79a35-264">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="79a35-265">Tar bort en variabel och dess värde.</span><span class="sxs-lookup"><span data-stu-id="79a35-265">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="79a35-266">Select-Object</span><span class="sxs-lookup"><span data-stu-id="79a35-266">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="79a35-267">Markerar objekt eller objekt egenskaper.</span><span class="sxs-lookup"><span data-stu-id="79a35-267">Selects objects or object properties.</span></span>

### [<span data-ttu-id="79a35-268">Select-String</span><span class="sxs-lookup"><span data-stu-id="79a35-268">Select-String</span></span>](Select-String.md)
<span data-ttu-id="79a35-269">Söker efter text i strängar och filer.</span><span class="sxs-lookup"><span data-stu-id="79a35-269">Finds text in strings and files.</span></span>

### [<span data-ttu-id="79a35-270">Select-XML</span><span class="sxs-lookup"><span data-stu-id="79a35-270">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="79a35-271">Söker efter text i en XML-sträng eller ett dokument.</span><span class="sxs-lookup"><span data-stu-id="79a35-271">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="79a35-272">Skicka meddelande</span><span class="sxs-lookup"><span data-stu-id="79a35-272">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="79a35-273">Skickar ett e-postmeddelande.</span><span class="sxs-lookup"><span data-stu-id="79a35-273">Sends an email message.</span></span>

### [<span data-ttu-id="79a35-274">Set-alias</span><span class="sxs-lookup"><span data-stu-id="79a35-274">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="79a35-275">Skapar eller ändrar ett alias för en cmdlet eller något annat kommando i den aktuella PowerShell-sessionen.</span><span class="sxs-lookup"><span data-stu-id="79a35-275">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="79a35-276">Ange datum</span><span class="sxs-lookup"><span data-stu-id="79a35-276">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="79a35-277">Ändrar system klockan på datorn till en tidpunkt som du anger.</span><span class="sxs-lookup"><span data-stu-id="79a35-277">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="79a35-278">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="79a35-278">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="79a35-279">Anger en Bryt punkt för en linje, ett kommando eller en variabel.</span><span class="sxs-lookup"><span data-stu-id="79a35-279">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="79a35-280">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="79a35-280">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="79a35-281">Konfigurerar, startar och stoppar en spårning av PowerShell-komponenter.</span><span class="sxs-lookup"><span data-stu-id="79a35-281">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="79a35-282">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="79a35-282">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="79a35-283">Anger värdet för en variabel.</span><span class="sxs-lookup"><span data-stu-id="79a35-283">Sets the value of a variable.</span></span>

### [<span data-ttu-id="79a35-284">Visa-kommando</span><span class="sxs-lookup"><span data-stu-id="79a35-284">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="79a35-285">Visar PowerShell-kommando information i ett grafiskt fönster.</span><span class="sxs-lookup"><span data-stu-id="79a35-285">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="79a35-286">Sortera objekt</span><span class="sxs-lookup"><span data-stu-id="79a35-286">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="79a35-287">Sorterar objekt efter egenskaps värden.</span><span class="sxs-lookup"><span data-stu-id="79a35-287">Sorts objects by property values.</span></span>

### [<span data-ttu-id="79a35-288">Start-vilo läge</span><span class="sxs-lookup"><span data-stu-id="79a35-288">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="79a35-289">Pausar aktiviteten i ett skript eller en session under den angivna tids perioden.</span><span class="sxs-lookup"><span data-stu-id="79a35-289">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="79a35-290">Tee – objekt</span><span class="sxs-lookup"><span data-stu-id="79a35-290">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="79a35-291">Sparar kommandoutdata i en fil eller variabel och skickar det sedan till pipelinen.</span><span class="sxs-lookup"><span data-stu-id="79a35-291">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="79a35-292">Spåra-kommando</span><span class="sxs-lookup"><span data-stu-id="79a35-292">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="79a35-293">Konfigurerar och startar en spårning av det angivna uttrycket eller kommandot.</span><span class="sxs-lookup"><span data-stu-id="79a35-293">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="79a35-294">Avblockera – fil</span><span class="sxs-lookup"><span data-stu-id="79a35-294">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="79a35-295">Avblockerar filer som har hämtats från Internet.</span><span class="sxs-lookup"><span data-stu-id="79a35-295">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="79a35-296">Avregistrera-händelse</span><span class="sxs-lookup"><span data-stu-id="79a35-296">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="79a35-297">Avbryter en händelse prenumeration.</span><span class="sxs-lookup"><span data-stu-id="79a35-297">Cancels an event subscription.</span></span>

### [<span data-ttu-id="79a35-298">Uppdatera – FormatData</span><span class="sxs-lookup"><span data-stu-id="79a35-298">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="79a35-299">Uppdaterar formaterings data i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="79a35-299">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="79a35-300">Update-List</span><span class="sxs-lookup"><span data-stu-id="79a35-300">Update-List</span></span>](Update-List.md)
<span data-ttu-id="79a35-301">Lägger till objekt i och tar bort objekt från ett egenskaps värde som innehåller en objekt samling.</span><span class="sxs-lookup"><span data-stu-id="79a35-301">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="79a35-302">Uppdatera – TypeData</span><span class="sxs-lookup"><span data-stu-id="79a35-302">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="79a35-303">Uppdaterar den utökade data typen i sessionen.</span><span class="sxs-lookup"><span data-stu-id="79a35-303">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="79a35-304">Vänta – fel sökning</span><span class="sxs-lookup"><span data-stu-id="79a35-304">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="79a35-305">Stoppar ett skript i fel söknings programmet innan du kör nästa instruktion i skriptet.</span><span class="sxs-lookup"><span data-stu-id="79a35-305">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="79a35-306">Vänta-händelse</span><span class="sxs-lookup"><span data-stu-id="79a35-306">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="79a35-307">Väntar tills en viss händelse utlöses innan körningen fortsätter att köras.</span><span class="sxs-lookup"><span data-stu-id="79a35-307">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="79a35-308">Skriv-debug</span><span class="sxs-lookup"><span data-stu-id="79a35-308">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="79a35-309">Skriver ett fel söknings meddelande till-konsolen.</span><span class="sxs-lookup"><span data-stu-id="79a35-309">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="79a35-310">Skriv-fel</span><span class="sxs-lookup"><span data-stu-id="79a35-310">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="79a35-311">Skriver ett objekt till fel strömmen.</span><span class="sxs-lookup"><span data-stu-id="79a35-311">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="79a35-312">Skriv värd</span><span class="sxs-lookup"><span data-stu-id="79a35-312">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="79a35-313">Skriver anpassade utdata till en värd.</span><span class="sxs-lookup"><span data-stu-id="79a35-313">Writes customized output to a host.</span></span>

### [<span data-ttu-id="79a35-314">Skriv information</span><span class="sxs-lookup"><span data-stu-id="79a35-314">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="79a35-315">Anger hur PowerShell hanterar informations Ströms data för ett kommando.</span><span class="sxs-lookup"><span data-stu-id="79a35-315">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="79a35-316">Skriva-utdata</span><span class="sxs-lookup"><span data-stu-id="79a35-316">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="79a35-317">Skickar de angivna objekten till nästa-kommando i pipelinen.</span><span class="sxs-lookup"><span data-stu-id="79a35-317">Sends the specified objects to the next command in the pipeline.</span></span>

### [<span data-ttu-id="79a35-318">Skriv förlopp</span><span class="sxs-lookup"><span data-stu-id="79a35-318">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="79a35-319">Visar en förlopps indikator i ett PowerShell-kommando fönster.</span><span class="sxs-lookup"><span data-stu-id="79a35-319">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="79a35-320">Skriv-verbose</span><span class="sxs-lookup"><span data-stu-id="79a35-320">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="79a35-321">Skriver text till data strömmen för utförliga meddelanden.</span><span class="sxs-lookup"><span data-stu-id="79a35-321">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="79a35-322">Skriv varning</span><span class="sxs-lookup"><span data-stu-id="79a35-322">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="79a35-323">Skriver ett varnings meddelande.</span><span class="sxs-lookup"><span data-stu-id="79a35-323">Writes a warning message.</span></span>
