reference/7.0/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113633
Help Version: 7.0.1.0
keywords: powershell,cmdlet
Locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
ms.openlocfilehash: 6afa678e516ca3f3f6af5be87d2bb7eea628fcf5
ms.sourcegitcommit: 9d95532afe81c235c8094eae28ab84b2f77f8c48
ms.translationtype: MT
ms.contentlocale: sv-SE
ms.lasthandoff: 10/07/2020
ms.locfileid: "93269828"
---
# <span data-ttu-id="51afa-103">Microsoft. PowerShell. Utility-modul</span><span class="sxs-lookup"><span data-stu-id="51afa-103">Microsoft.PowerShell.Utility Module</span></span>

## <span data-ttu-id="51afa-104">Beskrivning</span><span class="sxs-lookup"><span data-stu-id="51afa-104">Description</span></span>

<span data-ttu-id="51afa-105">Det här avsnittet innehåller hjälp avsnitten för de cmdlet: ar som installeras med Microsoft. PowerShell. Utility-modulen.</span><span class="sxs-lookup"><span data-stu-id="51afa-105">This section contains the help topics for the cmdlets that are installed with the Microsoft.PowerShell.Utility module.</span></span> <span data-ttu-id="51afa-106">Den här modulen innehåller cmdletar som hanterar de grundläggande funktionerna i PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51afa-106">This module contains cmdlets that manage the basic features of PowerShell.</span></span>

## <span data-ttu-id="51afa-107">Cmdletar för Microsoft. PowerShell. Utility</span><span class="sxs-lookup"><span data-stu-id="51afa-107">Microsoft.PowerShell.Utility Cmdlets</span></span>

### [<span data-ttu-id="51afa-108">Lägg till medlem</span><span class="sxs-lookup"><span data-stu-id="51afa-108">Add-Member</span></span>](Add-Member.md)
<span data-ttu-id="51afa-109">Lägger till anpassade egenskaper och metoder till en instans av ett PowerShell-objekt.</span><span class="sxs-lookup"><span data-stu-id="51afa-109">Adds custom properties and methods to an instance of a PowerShell object.</span></span>

### [<span data-ttu-id="51afa-110">Lägg till typ</span><span class="sxs-lookup"><span data-stu-id="51afa-110">Add-Type</span></span>](Add-Type.md)
<span data-ttu-id="51afa-111">Lägger till en Microsoft .NET Core-klass till en PowerShell-session.</span><span class="sxs-lookup"><span data-stu-id="51afa-111">Adds a Microsoft .NET Core class to a PowerShell session.</span></span>

### [<span data-ttu-id="51afa-112">Clear-Variable</span><span class="sxs-lookup"><span data-stu-id="51afa-112">Clear-Variable</span></span>](Clear-Variable.md)
<span data-ttu-id="51afa-113">Tar bort värdet för en variabel.</span><span class="sxs-lookup"><span data-stu-id="51afa-113">Deletes the value of a variable.</span></span>

### [<span data-ttu-id="51afa-114">Jämför objekt</span><span class="sxs-lookup"><span data-stu-id="51afa-114">Compare-Object</span></span>](Compare-Object.md)
<span data-ttu-id="51afa-115">Jämför två objekt uppsättningar.</span><span class="sxs-lookup"><span data-stu-id="51afa-115">Compares two sets of objects.</span></span>

### [<span data-ttu-id="51afa-116">ConvertFrom-CSV</span><span class="sxs-lookup"><span data-stu-id="51afa-116">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)
<span data-ttu-id="51afa-117">Konverterar objekt egenskaper i CSV-format (kommaavgränsat värde) till CSV-versioner av de ursprungliga objekten.</span><span class="sxs-lookup"><span data-stu-id="51afa-117">Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.</span></span>

### [<span data-ttu-id="51afa-118">ConvertFrom – JSON</span><span class="sxs-lookup"><span data-stu-id="51afa-118">ConvertFrom-Json</span></span>](ConvertFrom-Json.md)
<span data-ttu-id="51afa-119">Konverterar en JSON-formaterad sträng till ett anpassat objekt eller en hash-tabell.</span><span class="sxs-lookup"><span data-stu-id="51afa-119">Converts a JSON-formatted string to a custom object or a hash table.</span></span>

### [<span data-ttu-id="51afa-120">ConvertFrom – markdown</span><span class="sxs-lookup"><span data-stu-id="51afa-120">ConvertFrom-Markdown</span></span>](ConvertFrom-Markdown.md)
<span data-ttu-id="51afa-121">Konvertera innehållet i en sträng eller en fil till ett **MarkdownInfo** -objekt.</span><span class="sxs-lookup"><span data-stu-id="51afa-121">Convert the contents of a string or a file to a **MarkdownInfo** object.</span></span>

### [<span data-ttu-id="51afa-122">ConvertFrom-SddlString</span><span class="sxs-lookup"><span data-stu-id="51afa-122">ConvertFrom-SddlString</span></span>](ConvertFrom-SddlString.md)
<span data-ttu-id="51afa-123">Konverterar en SDDL-sträng till ett anpassat objekt.</span><span class="sxs-lookup"><span data-stu-id="51afa-123">Converts a SDDL string to a custom object.</span></span>

### [<span data-ttu-id="51afa-124">ConvertFrom-StringData</span><span class="sxs-lookup"><span data-stu-id="51afa-124">ConvertFrom-StringData</span></span>](ConvertFrom-StringData.md)
<span data-ttu-id="51afa-125">Konverterar en sträng som innehåller ett eller flera nyckel-och värdepar till en hash-tabell.</span><span class="sxs-lookup"><span data-stu-id="51afa-125">Converts a string containing one or more key and value pairs to a hash table.</span></span>

### [<span data-ttu-id="51afa-126">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="51afa-126">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)
<span data-ttu-id="51afa-127">Konverterar .NET-objekt till en serie med strängar med Character-separerade värden (CSV).</span><span class="sxs-lookup"><span data-stu-id="51afa-127">Converts .NET objects into a series of character-separated value (CSV) strings.</span></span>

### [<span data-ttu-id="51afa-128">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="51afa-128">ConvertTo-Html</span></span>](ConvertTo-Html.md)
<span data-ttu-id="51afa-129">Konverterar .NET-objekt till HTML som kan visas i en webbläsare.</span><span class="sxs-lookup"><span data-stu-id="51afa-129">Converts .NET objects into HTML that can be displayed in a Web browser.</span></span>

### [<span data-ttu-id="51afa-130">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="51afa-130">ConvertTo-Json</span></span>](ConvertTo-Json.md)
<span data-ttu-id="51afa-131">Konverterar ett objekt till en JSON-formaterad sträng.</span><span class="sxs-lookup"><span data-stu-id="51afa-131">Converts an object to a JSON-formatted string.</span></span>

### [<span data-ttu-id="51afa-132">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="51afa-132">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)
<span data-ttu-id="51afa-133">Skapar en XML-baserad representation av ett objekt.</span><span class="sxs-lookup"><span data-stu-id="51afa-133">Creates an XML-based representation of an object.</span></span>

### [<span data-ttu-id="51afa-134">Felsök – körnings utrymme</span><span class="sxs-lookup"><span data-stu-id="51afa-134">Debug-Runspace</span></span>](Debug-Runspace.md)
<span data-ttu-id="51afa-135">Startar en interaktiv felsökningssession med en körnings utrymme.</span><span class="sxs-lookup"><span data-stu-id="51afa-135">Starts an interactive debugging session with a runspace.</span></span>

### [<span data-ttu-id="51afa-136">Disable-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="51afa-136">Disable-PSBreakpoint</span></span>](Disable-PSBreakpoint.md)
<span data-ttu-id="51afa-137">Inaktiverar Bryt punkterna i den aktuella konsolen.</span><span class="sxs-lookup"><span data-stu-id="51afa-137">Disables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="51afa-138">Disable-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="51afa-138">Disable-RunspaceDebug</span></span>](Disable-RunspaceDebug.md)
<span data-ttu-id="51afa-139">Inaktiverar fel sökning på en eller flera körnings utrymmen och släpper eventuella väntande fel söknings program.</span><span class="sxs-lookup"><span data-stu-id="51afa-139">Disables debugging on one or more runspaces, and releases any pending debugger stop.</span></span>

### [<span data-ttu-id="51afa-140">Aktivera – PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="51afa-140">Enable-PSBreakpoint</span></span>](Enable-PSBreakpoint.md)
<span data-ttu-id="51afa-141">Aktiverar Bryt punkterna i den aktuella konsolen.</span><span class="sxs-lookup"><span data-stu-id="51afa-141">Enables the breakpoints in the current console.</span></span>

### [<span data-ttu-id="51afa-142">Aktivera – RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="51afa-142">Enable-RunspaceDebug</span></span>](Enable-RunspaceDebug.md)
<span data-ttu-id="51afa-143">Aktiverar fel sökning på körnings utrymmen där en Bryt punkt bevaras tills en fel sökare är ansluten.</span><span class="sxs-lookup"><span data-stu-id="51afa-143">Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.</span></span>

### [<span data-ttu-id="51afa-144">Exportera-alias</span><span class="sxs-lookup"><span data-stu-id="51afa-144">Export-Alias</span></span>](Export-Alias.md)
<span data-ttu-id="51afa-145">Exporterar information om aktuella definierade alias till en fil.</span><span class="sxs-lookup"><span data-stu-id="51afa-145">Exports information about currently defined aliases to a file.</span></span>

### [<span data-ttu-id="51afa-146">Exportera – CliXml</span><span class="sxs-lookup"><span data-stu-id="51afa-146">Export-Clixml</span></span>](Export-Clixml.md)
<span data-ttu-id="51afa-147">Skapar en XML-baserad representation av ett objekt eller objekt och lagrar det i en fil.</span><span class="sxs-lookup"><span data-stu-id="51afa-147">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

### [<span data-ttu-id="51afa-148">Exportera-CSV</span><span class="sxs-lookup"><span data-stu-id="51afa-148">Export-Csv</span></span>](Export-Csv.md)
<span data-ttu-id="51afa-149">Konverterar objekt till en serie med kommaavgränsade värde strängar (CSV) och sparar strängarna i en fil.</span><span class="sxs-lookup"><span data-stu-id="51afa-149">Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.</span></span>

### [<span data-ttu-id="51afa-150">Exportera – FormatData</span><span class="sxs-lookup"><span data-stu-id="51afa-150">Export-FormatData</span></span>](Export-FormatData.md)
<span data-ttu-id="51afa-151">Sparar formatering av data från den aktuella sessionen i en format fil.</span><span class="sxs-lookup"><span data-stu-id="51afa-151">Saves formatting data from the current session in a formatting file.</span></span>

### [<span data-ttu-id="51afa-152">Exportera – PSSession</span><span class="sxs-lookup"><span data-stu-id="51afa-152">Export-PSSession</span></span>](Export-PSSession.md)
<span data-ttu-id="51afa-153">Exporterar kommandon från en annan session och sparar dem i en PowerShell-modul.</span><span class="sxs-lookup"><span data-stu-id="51afa-153">Exports commands from another session and saves them in a PowerShell module.</span></span>

### [<span data-ttu-id="51afa-154">Format-Custom</span><span class="sxs-lookup"><span data-stu-id="51afa-154">Format-Custom</span></span>](Format-Custom.md)
<span data-ttu-id="51afa-155">Använder en anpassad vy för att formatera utdata.</span><span class="sxs-lookup"><span data-stu-id="51afa-155">Uses a customized view to format the output.</span></span>

### [<span data-ttu-id="51afa-156">Format-Hex</span><span class="sxs-lookup"><span data-stu-id="51afa-156">Format-Hex</span></span>](Format-Hex.md)
<span data-ttu-id="51afa-157">Visar en fil eller andra indata som hexadecimala.</span><span class="sxs-lookup"><span data-stu-id="51afa-157">Displays a file or other input as hexadecimal.</span></span>

### [<span data-ttu-id="51afa-158">Format-List</span><span class="sxs-lookup"><span data-stu-id="51afa-158">Format-List</span></span>](Format-List.md)
<span data-ttu-id="51afa-159">Formaterar utdata som en lista med egenskaper där varje egenskap visas på en ny rad.</span><span class="sxs-lookup"><span data-stu-id="51afa-159">Formats the output as a list of properties in which each property appears on a new line.</span></span>

### [<span data-ttu-id="51afa-160">Format-Table</span><span class="sxs-lookup"><span data-stu-id="51afa-160">Format-Table</span></span>](Format-Table.md)
<span data-ttu-id="51afa-161">Formaterar utdata som en tabell.</span><span class="sxs-lookup"><span data-stu-id="51afa-161">Formats the output as a table.</span></span>

### [<span data-ttu-id="51afa-162">Format-Wide</span><span class="sxs-lookup"><span data-stu-id="51afa-162">Format-Wide</span></span>](Format-Wide.md)
<span data-ttu-id="51afa-163">Formaterar objekt som en bred tabell som endast visar en egenskap för varje objekt.</span><span class="sxs-lookup"><span data-stu-id="51afa-163">Formats objects as a wide table that displays only one property of each object.</span></span>

### [<span data-ttu-id="51afa-164">Get-alias</span><span class="sxs-lookup"><span data-stu-id="51afa-164">Get-Alias</span></span>](Get-Alias.md)
<span data-ttu-id="51afa-165">Hämtar alias för den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="51afa-165">Gets the aliases for the current session.</span></span>

### [<span data-ttu-id="51afa-166">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="51afa-166">Get-Culture</span></span>](Get-Culture.md)
<span data-ttu-id="51afa-167">Hämtar den aktuella kulturen som angetts i operativ systemet.</span><span class="sxs-lookup"><span data-stu-id="51afa-167">Gets the current culture set in the operating system.</span></span>

### [<span data-ttu-id="51afa-168">Hämta datum</span><span class="sxs-lookup"><span data-stu-id="51afa-168">Get-Date</span></span>](Get-Date.md)
<span data-ttu-id="51afa-169">Hämtar aktuellt datum och aktuell tid.</span><span class="sxs-lookup"><span data-stu-id="51afa-169">Gets the current date and time.</span></span>

### [<span data-ttu-id="51afa-170">Get-Error</span><span class="sxs-lookup"><span data-stu-id="51afa-170">Get-Error</span></span>](Get-Error.md)
<span data-ttu-id="51afa-171">Hämtar och visar de senaste fel meddelandena från den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="51afa-171">Gets and displays the most recent error messages from the current session.</span></span>

### [<span data-ttu-id="51afa-172">Hämta händelse</span><span class="sxs-lookup"><span data-stu-id="51afa-172">Get-Event</span></span>](Get-Event.md)
<span data-ttu-id="51afa-173">Hämtar händelserna i händelse kön.</span><span class="sxs-lookup"><span data-stu-id="51afa-173">Gets the events in the event queue.</span></span>

### [<span data-ttu-id="51afa-174">Get-EventSubscriber</span><span class="sxs-lookup"><span data-stu-id="51afa-174">Get-EventSubscriber</span></span>](Get-EventSubscriber.md)
<span data-ttu-id="51afa-175">Hämtar händelse prenumeranterna i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="51afa-175">Gets the event subscribers in the current session.</span></span>

### [<span data-ttu-id="51afa-176">Get-FileHash</span><span class="sxs-lookup"><span data-stu-id="51afa-176">Get-FileHash</span></span>](Get-FileHash.md)
<span data-ttu-id="51afa-177">Beräknar hash-värdet för en fil med hjälp av en angiven hash-algoritm.</span><span class="sxs-lookup"><span data-stu-id="51afa-177">Computes the hash value for a file by using a specified hash algorithm.</span></span>

### [<span data-ttu-id="51afa-178">Get-FormatData</span><span class="sxs-lookup"><span data-stu-id="51afa-178">Get-FormatData</span></span>](Get-FormatData.md)
<span data-ttu-id="51afa-179">Hämtar formaterings data i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="51afa-179">Gets the formatting data in the current session.</span></span>

### [<span data-ttu-id="51afa-180">Hämta värd</span><span class="sxs-lookup"><span data-stu-id="51afa-180">Get-Host</span></span>](Get-Host.md)
<span data-ttu-id="51afa-181">Hämtar ett objekt som representerar det aktuella värd programmet.</span><span class="sxs-lookup"><span data-stu-id="51afa-181">Gets an object that represents the current host program.</span></span>

### [<span data-ttu-id="51afa-182">Get-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="51afa-182">Get-MarkdownOption</span></span>](Get-MarkdownOption.md)
<span data-ttu-id="51afa-183">Returnerar de aktuella färgerna och formaten som används för att återge markdown-innehåll i-konsolen.</span><span class="sxs-lookup"><span data-stu-id="51afa-183">Returns the current colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="51afa-184">Hämta medlem</span><span class="sxs-lookup"><span data-stu-id="51afa-184">Get-Member</span></span>](Get-Member.md)
<span data-ttu-id="51afa-185">Hämtar egenskaper och metoder för objekt.</span><span class="sxs-lookup"><span data-stu-id="51afa-185">Gets the properties and methods of objects.</span></span>

### [<span data-ttu-id="51afa-186">Get-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="51afa-186">Get-PSBreakpoint</span></span>](Get-PSBreakpoint.md)
<span data-ttu-id="51afa-187">Hämtar de Bryt punkter som har angetts i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="51afa-187">Gets the breakpoints that are set in the current session.</span></span>

### [<span data-ttu-id="51afa-188">Get-PSCallStack</span><span class="sxs-lookup"><span data-stu-id="51afa-188">Get-PSCallStack</span></span>](Get-PSCallStack.md)
<span data-ttu-id="51afa-189">Visar den aktuella anrops stacken.</span><span class="sxs-lookup"><span data-stu-id="51afa-189">Displays the current call stack.</span></span>

### [<span data-ttu-id="51afa-190">Hämta slumpmässiga</span><span class="sxs-lookup"><span data-stu-id="51afa-190">Get-Random</span></span>](Get-Random.md)
<span data-ttu-id="51afa-191">Hämtar ett slumpmässigt tal eller väljer objekt slumpmässigt från en samling.</span><span class="sxs-lookup"><span data-stu-id="51afa-191">Gets a random number, or selects objects randomly from a collection.</span></span>

### [<span data-ttu-id="51afa-192">Get-körnings utrymme</span><span class="sxs-lookup"><span data-stu-id="51afa-192">Get-Runspace</span></span>](Get-Runspace.md)
<span data-ttu-id="51afa-193">Hämtar aktiva körnings utrymmen i en PowerShell-värd process.</span><span class="sxs-lookup"><span data-stu-id="51afa-193">Gets active runspaces within a PowerShell host process.</span></span>

### [<span data-ttu-id="51afa-194">Get-RunspaceDebug</span><span class="sxs-lookup"><span data-stu-id="51afa-194">Get-RunspaceDebug</span></span>](Get-RunspaceDebug.md)
<span data-ttu-id="51afa-195">Visar körnings utrymme fel söknings alternativ.</span><span class="sxs-lookup"><span data-stu-id="51afa-195">Shows runspace debugging options.</span></span>

### [<span data-ttu-id="51afa-196">Get-TraceSource</span><span class="sxs-lookup"><span data-stu-id="51afa-196">Get-TraceSource</span></span>](Get-TraceSource.md)
<span data-ttu-id="51afa-197">Hämtar PowerShell-komponenter som instrumenteras för spårning.</span><span class="sxs-lookup"><span data-stu-id="51afa-197">Gets PowerShell components that are instrumented for tracing.</span></span>

### [<span data-ttu-id="51afa-198">Get-TypeData</span><span class="sxs-lookup"><span data-stu-id="51afa-198">Get-TypeData</span></span>](Get-TypeData.md)
<span data-ttu-id="51afa-199">Hämtar utökade typ data i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="51afa-199">Gets the extended type data in the current session.</span></span>

### [<span data-ttu-id="51afa-200">Get-värdet</span><span class="sxs-lookup"><span data-stu-id="51afa-200">Get-UICulture</span></span>](Get-UICulture.md)
<span data-ttu-id="51afa-201">Hämtar de aktuella inställningarna för användar gränssnitts kulturen i operativ systemet.</span><span class="sxs-lookup"><span data-stu-id="51afa-201">Gets the current UI culture settings in the operating system.</span></span>

### [<span data-ttu-id="51afa-202">Hämta unika</span><span class="sxs-lookup"><span data-stu-id="51afa-202">Get-Unique</span></span>](Get-Unique.md)
<span data-ttu-id="51afa-203">Returnerar unika objekt från en sorterad lista.</span><span class="sxs-lookup"><span data-stu-id="51afa-203">Returns unique items from a sorted list.</span></span>

### [<span data-ttu-id="51afa-204">Hämta drift tid</span><span class="sxs-lookup"><span data-stu-id="51afa-204">Get-Uptime</span></span>](Get-Uptime.md)
<span data-ttu-id="51afa-205">Hämta **TimeSpan** sedan senaste start.</span><span class="sxs-lookup"><span data-stu-id="51afa-205">Get the **TimeSpan** since last boot.</span></span>

### [<span data-ttu-id="51afa-206">Get-Variable</span><span class="sxs-lookup"><span data-stu-id="51afa-206">Get-Variable</span></span>](Get-Variable.md)
<span data-ttu-id="51afa-207">Hämtar variablerna i den aktuella konsolen.</span><span class="sxs-lookup"><span data-stu-id="51afa-207">Gets the variables in the current console.</span></span>

### [<span data-ttu-id="51afa-208">Get-verb</span><span class="sxs-lookup"><span data-stu-id="51afa-208">Get-Verb</span></span>](Get-Verb.md)
<span data-ttu-id="51afa-209">Hämtar godkända PowerShell-verb.</span><span class="sxs-lookup"><span data-stu-id="51afa-209">Gets approved PowerShell verbs.</span></span>

### [<span data-ttu-id="51afa-210">Gruppera objekt</span><span class="sxs-lookup"><span data-stu-id="51afa-210">Group-Object</span></span>](Group-Object.md)
<span data-ttu-id="51afa-211">Grupperar objekt som innehåller samma värde för angivna egenskaper.</span><span class="sxs-lookup"><span data-stu-id="51afa-211">Groups objects that contain the same value for specified properties.</span></span>

### [<span data-ttu-id="51afa-212">Importera-alias</span><span class="sxs-lookup"><span data-stu-id="51afa-212">Import-Alias</span></span>](Import-Alias.md)
<span data-ttu-id="51afa-213">Importerar en aliasresurspost från en fil.</span><span class="sxs-lookup"><span data-stu-id="51afa-213">Imports an alias list from a file.</span></span>

### [<span data-ttu-id="51afa-214">Importera – CliXml</span><span class="sxs-lookup"><span data-stu-id="51afa-214">Import-Clixml</span></span>](Import-Clixml.md)
<span data-ttu-id="51afa-215">Importerar en CLIXML-fil och skapar motsvarande objekt i PowerShell.</span><span class="sxs-lookup"><span data-stu-id="51afa-215">Imports a CLIXML file and creates corresponding objects in PowerShell.</span></span>

### [<span data-ttu-id="51afa-216">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="51afa-216">Import-Csv</span></span>](Import-Csv.md)
<span data-ttu-id="51afa-217">Skapar tabeller som liknar anpassade objekt från objekten i en fil med kommaavgränsade värden (CSV).</span><span class="sxs-lookup"><span data-stu-id="51afa-217">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

### [<span data-ttu-id="51afa-218">Importera – LocalizedData</span><span class="sxs-lookup"><span data-stu-id="51afa-218">Import-LocalizedData</span></span>](Import-LocalizedData.md)
<span data-ttu-id="51afa-219">Importerar språkspecifika data till skript och funktioner baserat på den användar gränssnitts kultur som valts för operativ systemet.</span><span class="sxs-lookup"><span data-stu-id="51afa-219">Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.</span></span>

### [<span data-ttu-id="51afa-220">Importera – PowerShellDataFile</span><span class="sxs-lookup"><span data-stu-id="51afa-220">Import-PowerShellDataFile</span></span>](Import-PowerShellDataFile.md)
<span data-ttu-id="51afa-221">Importerar värden från en `.PSD1` fil utan att anropa dess innehåll.</span><span class="sxs-lookup"><span data-stu-id="51afa-221">Imports values from a `.PSD1` file without invoking its contents.</span></span>

### [<span data-ttu-id="51afa-222">Importera – PSSession</span><span class="sxs-lookup"><span data-stu-id="51afa-222">Import-PSSession</span></span>](Import-PSSession.md)
<span data-ttu-id="51afa-223">Importerar kommandon från en annan session till den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="51afa-223">Imports commands from another session into the current session.</span></span>

### [<span data-ttu-id="51afa-224">Invoke-uttryck</span><span class="sxs-lookup"><span data-stu-id="51afa-224">Invoke-Expression</span></span>](Invoke-Expression.md)
<span data-ttu-id="51afa-225">Kör kommandon eller uttryck på den lokala datorn.</span><span class="sxs-lookup"><span data-stu-id="51afa-225">Runs commands or expressions on the local computer.</span></span>

### [<span data-ttu-id="51afa-226">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="51afa-226">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
<span data-ttu-id="51afa-227">Skickar en HTTP-eller HTTPS-begäran till en RESTful-webbtjänst.</span><span class="sxs-lookup"><span data-stu-id="51afa-227">Sends an HTTP or HTTPS request to a RESTful web service.</span></span>

### [<span data-ttu-id="51afa-228">Anropa-webbegäran</span><span class="sxs-lookup"><span data-stu-id="51afa-228">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)
<span data-ttu-id="51afa-229">Hämtar innehåll från en webb sida på Internet.</span><span class="sxs-lookup"><span data-stu-id="51afa-229">Gets content from a web page on the internet.</span></span>

### [<span data-ttu-id="51afa-230">Anslut till sträng</span><span class="sxs-lookup"><span data-stu-id="51afa-230">Join-String</span></span>](Join-String.md)
<span data-ttu-id="51afa-231">Kombinerar objekt från pipelinen till en enda sträng.</span><span class="sxs-lookup"><span data-stu-id="51afa-231">Combines objects from the pipeline into a single string.</span></span>

### [<span data-ttu-id="51afa-232">Measure-Command</span><span class="sxs-lookup"><span data-stu-id="51afa-232">Measure-Command</span></span>](Measure-Command.md)
<span data-ttu-id="51afa-233">Mäter den tid det tar att köra skript block och cmdlets.</span><span class="sxs-lookup"><span data-stu-id="51afa-233">Measures the time it takes to run script blocks and cmdlets.</span></span>

### [<span data-ttu-id="51afa-234">Mått – objekt</span><span class="sxs-lookup"><span data-stu-id="51afa-234">Measure-Object</span></span>](Measure-Object.md)
<span data-ttu-id="51afa-235">Beräknar numeriska egenskaper för objekt, samt tecken, ord och rader i sträng objekt, till exempel filer för text.</span><span class="sxs-lookup"><span data-stu-id="51afa-235">Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.</span></span>

### [<span data-ttu-id="51afa-236">Nytt-alias</span><span class="sxs-lookup"><span data-stu-id="51afa-236">New-Alias</span></span>](New-Alias.md)
<span data-ttu-id="51afa-237">Skapar ett nytt alias.</span><span class="sxs-lookup"><span data-stu-id="51afa-237">Creates a new alias.</span></span>

### [<span data-ttu-id="51afa-238">Ny händelse</span><span class="sxs-lookup"><span data-stu-id="51afa-238">New-Event</span></span>](New-Event.md)
<span data-ttu-id="51afa-239">Skapar en ny händelse.</span><span class="sxs-lookup"><span data-stu-id="51afa-239">Creates a new event.</span></span>

### [<span data-ttu-id="51afa-240">New-GUID</span><span class="sxs-lookup"><span data-stu-id="51afa-240">New-Guid</span></span>](New-Guid.md)
<span data-ttu-id="51afa-241">Skapar ett GUID.</span><span class="sxs-lookup"><span data-stu-id="51afa-241">Creates a GUID.</span></span>

### [<span data-ttu-id="51afa-242">Nytt – objekt</span><span class="sxs-lookup"><span data-stu-id="51afa-242">New-Object</span></span>](New-Object.md)
<span data-ttu-id="51afa-243">Skapar en instans av ett Microsoft .NET Framework-eller COM-objekt.</span><span class="sxs-lookup"><span data-stu-id="51afa-243">Creates an instance of a Microsoft .NET Framework or COM object.</span></span>

### [<span data-ttu-id="51afa-244">New-TemporaryFile</span><span class="sxs-lookup"><span data-stu-id="51afa-244">New-TemporaryFile</span></span>](New-TemporaryFile.md)
<span data-ttu-id="51afa-245">Skapar en temporär fil.</span><span class="sxs-lookup"><span data-stu-id="51afa-245">Creates a temporary file.</span></span>

### [<span data-ttu-id="51afa-246">New-TimeSpan</span><span class="sxs-lookup"><span data-stu-id="51afa-246">New-TimeSpan</span></span>](New-TimeSpan.md)
<span data-ttu-id="51afa-247">Skapar ett TimeSpan-objekt.</span><span class="sxs-lookup"><span data-stu-id="51afa-247">Creates a TimeSpan object.</span></span>

### [<span data-ttu-id="51afa-248">Ny variabel</span><span class="sxs-lookup"><span data-stu-id="51afa-248">New-Variable</span></span>](New-Variable.md)
<span data-ttu-id="51afa-249">Skapar en ny variabel.</span><span class="sxs-lookup"><span data-stu-id="51afa-249">Creates a new variable.</span></span>

### [<span data-ttu-id="51afa-250">Ut-fil</span><span class="sxs-lookup"><span data-stu-id="51afa-250">Out-File</span></span>](Out-File.md)
<span data-ttu-id="51afa-251">Skickar utdata till en fil.</span><span class="sxs-lookup"><span data-stu-id="51afa-251">Sends output to a file.</span></span>

### [<span data-ttu-id="51afa-252">Out-GridView</span><span class="sxs-lookup"><span data-stu-id="51afa-252">Out-GridView</span></span>](Out-GridView.md)
<span data-ttu-id="51afa-253">Skickar utdata till en interaktiv tabell i ett separat fönster.</span><span class="sxs-lookup"><span data-stu-id="51afa-253">Sends output to an interactive table in a separate window.</span></span>

### [<span data-ttu-id="51afa-254">Out-Printer</span><span class="sxs-lookup"><span data-stu-id="51afa-254">Out-Printer</span></span>](Out-Printer.md)
<span data-ttu-id="51afa-255">Skickar utdata till en skrivare.</span><span class="sxs-lookup"><span data-stu-id="51afa-255">Sends output to a printer.</span></span>

### [<span data-ttu-id="51afa-256">Out-sträng</span><span class="sxs-lookup"><span data-stu-id="51afa-256">Out-String</span></span>](Out-String.md)
<span data-ttu-id="51afa-257">Matar in indata-objekt som en sträng.</span><span class="sxs-lookup"><span data-stu-id="51afa-257">Outputs input objects as a strings.</span></span>

### [<span data-ttu-id="51afa-258">Read-Host</span><span class="sxs-lookup"><span data-stu-id="51afa-258">Read-Host</span></span>](Read-Host.md)
<span data-ttu-id="51afa-259">Läser en rad med ininformation från-konsolen.</span><span class="sxs-lookup"><span data-stu-id="51afa-259">Reads a line of input from the console.</span></span>

### [<span data-ttu-id="51afa-260">Registrera – EngineEvent</span><span class="sxs-lookup"><span data-stu-id="51afa-260">Register-EngineEvent</span></span>](Register-EngineEvent.md)
<span data-ttu-id="51afa-261">Prenumererar på händelser som genereras av PowerShell-motorn och av `New-Event` cmdleten.</span><span class="sxs-lookup"><span data-stu-id="51afa-261">Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.</span></span>

### [<span data-ttu-id="51afa-262">Registrera – ObjectEvent</span><span class="sxs-lookup"><span data-stu-id="51afa-262">Register-ObjectEvent</span></span>](Register-ObjectEvent.md)
<span data-ttu-id="51afa-263">Prenumererar på händelser som genereras av ett Microsoft .NET Framework-objekt.</span><span class="sxs-lookup"><span data-stu-id="51afa-263">Subscribes to the events that are generated by a Microsoft .NET Framework object.</span></span>

### [<span data-ttu-id="51afa-264">Ta bort-alias</span><span class="sxs-lookup"><span data-stu-id="51afa-264">Remove-Alias</span></span>](Remove-Alias.md)
<span data-ttu-id="51afa-265">Ta bort ett alias från den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="51afa-265">Remove an alias from the current session.</span></span>

### [<span data-ttu-id="51afa-266">Ta bort händelse</span><span class="sxs-lookup"><span data-stu-id="51afa-266">Remove-Event</span></span>](Remove-Event.md)
<span data-ttu-id="51afa-267">Tar bort händelser från händelse kön.</span><span class="sxs-lookup"><span data-stu-id="51afa-267">Deletes events from the event queue.</span></span>

### [<span data-ttu-id="51afa-268">Remove-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="51afa-268">Remove-PSBreakpoint</span></span>](Remove-PSBreakpoint.md)
<span data-ttu-id="51afa-269">Tar bort Bryt punkter från den aktuella konsolen.</span><span class="sxs-lookup"><span data-stu-id="51afa-269">Deletes breakpoints from the current console.</span></span>

### [<span data-ttu-id="51afa-270">Remove-TypeData</span><span class="sxs-lookup"><span data-stu-id="51afa-270">Remove-TypeData</span></span>](Remove-TypeData.md)
<span data-ttu-id="51afa-271">Tar bort utökade typer från den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="51afa-271">Deletes extended types from the current session.</span></span>

### [<span data-ttu-id="51afa-272">Ta bort variabel</span><span class="sxs-lookup"><span data-stu-id="51afa-272">Remove-Variable</span></span>](Remove-Variable.md)
<span data-ttu-id="51afa-273">Tar bort en variabel och dess värde.</span><span class="sxs-lookup"><span data-stu-id="51afa-273">Deletes a variable and its value.</span></span>

### [<span data-ttu-id="51afa-274">Select-Object</span><span class="sxs-lookup"><span data-stu-id="51afa-274">Select-Object</span></span>](Select-Object.md)
<span data-ttu-id="51afa-275">Markerar objekt eller objekt egenskaper.</span><span class="sxs-lookup"><span data-stu-id="51afa-275">Selects objects or object properties.</span></span>

### [<span data-ttu-id="51afa-276">Select-String</span><span class="sxs-lookup"><span data-stu-id="51afa-276">Select-String</span></span>](Select-String.md)
<span data-ttu-id="51afa-277">Söker efter text i strängar och filer.</span><span class="sxs-lookup"><span data-stu-id="51afa-277">Finds text in strings and files.</span></span>

### [<span data-ttu-id="51afa-278">Select-XML</span><span class="sxs-lookup"><span data-stu-id="51afa-278">Select-Xml</span></span>](Select-Xml.md)
<span data-ttu-id="51afa-279">Söker efter text i en XML-sträng eller ett dokument.</span><span class="sxs-lookup"><span data-stu-id="51afa-279">Finds text in an XML string or document.</span></span>

### [<span data-ttu-id="51afa-280">Skicka meddelande</span><span class="sxs-lookup"><span data-stu-id="51afa-280">Send-MailMessage</span></span>](Send-MailMessage.md)
<span data-ttu-id="51afa-281">Skickar ett e-postmeddelande.</span><span class="sxs-lookup"><span data-stu-id="51afa-281">Sends an email message.</span></span>

### [<span data-ttu-id="51afa-282">Set-alias</span><span class="sxs-lookup"><span data-stu-id="51afa-282">Set-Alias</span></span>](Set-Alias.md)
<span data-ttu-id="51afa-283">Skapar eller ändrar ett alias för en cmdlet eller något annat kommando i den aktuella PowerShell-sessionen.</span><span class="sxs-lookup"><span data-stu-id="51afa-283">Creates or changes an alias for a cmdlet or other command in the current PowerShell session.</span></span>

### [<span data-ttu-id="51afa-284">Ange datum</span><span class="sxs-lookup"><span data-stu-id="51afa-284">Set-Date</span></span>](Set-Date.md)
<span data-ttu-id="51afa-285">Ändrar system klockan på datorn till en tidpunkt som du anger.</span><span class="sxs-lookup"><span data-stu-id="51afa-285">Changes the system time on the computer to a time that you specify.</span></span>

### [<span data-ttu-id="51afa-286">Set-MarkdownOption</span><span class="sxs-lookup"><span data-stu-id="51afa-286">Set-MarkdownOption</span></span>](Set-MarkdownOption.md)
<span data-ttu-id="51afa-287">Anger de färger och format som används för att återge markdown-innehåll i-konsolen.</span><span class="sxs-lookup"><span data-stu-id="51afa-287">Sets the colors and styles used for rendering Markdown content in the console.</span></span>

### [<span data-ttu-id="51afa-288">Set-PSBreakpoint</span><span class="sxs-lookup"><span data-stu-id="51afa-288">Set-PSBreakpoint</span></span>](Set-PSBreakpoint.md)
<span data-ttu-id="51afa-289">Anger en Bryt punkt för en linje, ett kommando eller en variabel.</span><span class="sxs-lookup"><span data-stu-id="51afa-289">Sets a breakpoint on a line, command, or variable.</span></span>

### [<span data-ttu-id="51afa-290">Set-TraceSource</span><span class="sxs-lookup"><span data-stu-id="51afa-290">Set-TraceSource</span></span>](Set-TraceSource.md)
<span data-ttu-id="51afa-291">Konfigurerar, startar och stoppar en spårning av PowerShell-komponenter.</span><span class="sxs-lookup"><span data-stu-id="51afa-291">Configures, starts, and stops a trace of PowerShell components.</span></span>

### [<span data-ttu-id="51afa-292">Set-Variable</span><span class="sxs-lookup"><span data-stu-id="51afa-292">Set-Variable</span></span>](Set-Variable.md)
<span data-ttu-id="51afa-293">Anger värdet för en variabel.</span><span class="sxs-lookup"><span data-stu-id="51afa-293">Sets the value of a variable.</span></span> <span data-ttu-id="51afa-294">Skapar variabeln om en med det begärda namnet inte finns.</span><span class="sxs-lookup"><span data-stu-id="51afa-294">Creates the variable if one with the requested name does not exist.</span></span>

### [<span data-ttu-id="51afa-295">Visa-kommando</span><span class="sxs-lookup"><span data-stu-id="51afa-295">Show-Command</span></span>](Show-Command.md)
<span data-ttu-id="51afa-296">Visar PowerShell-kommando information i ett grafiskt fönster.</span><span class="sxs-lookup"><span data-stu-id="51afa-296">Displays PowerShell command information in a graphical window.</span></span>

### [<span data-ttu-id="51afa-297">Visa markdown</span><span class="sxs-lookup"><span data-stu-id="51afa-297">Show-Markdown</span></span>](Show-Markdown.md)
<span data-ttu-id="51afa-298">Visar en MARKDOWN-fil eller-sträng i-konsolen på ett användarvänligt sätt med VT100 escape-sekvenser eller i en webbläsare med HTML.</span><span class="sxs-lookup"><span data-stu-id="51afa-298">Shows a Markdown file or string in the console in a friendly way using VT100 escape sequences or in a browser using HTML.</span></span>

### [<span data-ttu-id="51afa-299">Sortera objekt</span><span class="sxs-lookup"><span data-stu-id="51afa-299">Sort-Object</span></span>](Sort-Object.md)
<span data-ttu-id="51afa-300">Sorterar objekt efter egenskaps värden.</span><span class="sxs-lookup"><span data-stu-id="51afa-300">Sorts objects by property values.</span></span>

### [<span data-ttu-id="51afa-301">Start-vilo läge</span><span class="sxs-lookup"><span data-stu-id="51afa-301">Start-Sleep</span></span>](Start-Sleep.md)
<span data-ttu-id="51afa-302">Pausar aktiviteten i ett skript eller en session under den angivna tids perioden.</span><span class="sxs-lookup"><span data-stu-id="51afa-302">Suspends the activity in a script or session for the specified period of time.</span></span>

### [<span data-ttu-id="51afa-303">Tee – objekt</span><span class="sxs-lookup"><span data-stu-id="51afa-303">Tee-Object</span></span>](Tee-Object.md)
<span data-ttu-id="51afa-304">Sparar kommandoutdata i en fil eller variabel och skickar det sedan till pipelinen.</span><span class="sxs-lookup"><span data-stu-id="51afa-304">Saves command output in a file or variable and also sends it down the pipeline.</span></span>

### [<span data-ttu-id="51afa-305">Test-JSON</span><span class="sxs-lookup"><span data-stu-id="51afa-305">Test-Json</span></span>](Test-Json.md)
<span data-ttu-id="51afa-306">Testar om en sträng är ett giltigt JSON-dokument</span><span class="sxs-lookup"><span data-stu-id="51afa-306">Tests whether a string is a valid JSON document</span></span>

### [<span data-ttu-id="51afa-307">Spåra-kommando</span><span class="sxs-lookup"><span data-stu-id="51afa-307">Trace-Command</span></span>](Trace-Command.md)
<span data-ttu-id="51afa-308">Konfigurerar och startar en spårning av det angivna uttrycket eller kommandot.</span><span class="sxs-lookup"><span data-stu-id="51afa-308">Configures and starts a trace of the specified expression or command.</span></span>

### [<span data-ttu-id="51afa-309">Avblockera – fil</span><span class="sxs-lookup"><span data-stu-id="51afa-309">Unblock-File</span></span>](Unblock-File.md)
<span data-ttu-id="51afa-310">Avblockerar filer som har hämtats från Internet.</span><span class="sxs-lookup"><span data-stu-id="51afa-310">Unblocks files that were downloaded from the Internet.</span></span>

### [<span data-ttu-id="51afa-311">Avregistrera-händelse</span><span class="sxs-lookup"><span data-stu-id="51afa-311">Unregister-Event</span></span>](Unregister-Event.md)
<span data-ttu-id="51afa-312">Avbryter en händelse prenumeration.</span><span class="sxs-lookup"><span data-stu-id="51afa-312">Cancels an event subscription.</span></span>

### [<span data-ttu-id="51afa-313">Uppdatera – FormatData</span><span class="sxs-lookup"><span data-stu-id="51afa-313">Update-FormatData</span></span>](Update-FormatData.md)
<span data-ttu-id="51afa-314">Uppdaterar formaterings data i den aktuella sessionen.</span><span class="sxs-lookup"><span data-stu-id="51afa-314">Updates the formatting data in the current session.</span></span>

### [<span data-ttu-id="51afa-315">Update-List</span><span class="sxs-lookup"><span data-stu-id="51afa-315">Update-List</span></span>](Update-List.md)
<span data-ttu-id="51afa-316">Lägger till objekt i och tar bort objekt från ett egenskaps värde som innehåller en objekt samling.</span><span class="sxs-lookup"><span data-stu-id="51afa-316">Adds items to and removes items from a property value that contains a collection of objects.</span></span>

### [<span data-ttu-id="51afa-317">Uppdatera – TypeData</span><span class="sxs-lookup"><span data-stu-id="51afa-317">Update-TypeData</span></span>](Update-TypeData.md)
<span data-ttu-id="51afa-318">Uppdaterar den utökade data typen i sessionen.</span><span class="sxs-lookup"><span data-stu-id="51afa-318">Updates the extended type data in the session.</span></span>

### [<span data-ttu-id="51afa-319">Vänta – fel sökning</span><span class="sxs-lookup"><span data-stu-id="51afa-319">Wait-Debugger</span></span>](Wait-Debugger.md)
<span data-ttu-id="51afa-320">Stoppar ett skript i fel söknings programmet innan du kör nästa instruktion i skriptet.</span><span class="sxs-lookup"><span data-stu-id="51afa-320">Stops a script in the debugger before running the next statement in the script.</span></span>

### [<span data-ttu-id="51afa-321">Vänta-händelse</span><span class="sxs-lookup"><span data-stu-id="51afa-321">Wait-Event</span></span>](Wait-Event.md)
<span data-ttu-id="51afa-322">Väntar tills en viss händelse utlöses innan körningen fortsätter att köras.</span><span class="sxs-lookup"><span data-stu-id="51afa-322">Waits until a particular event is raised before continuing to run.</span></span>

### [<span data-ttu-id="51afa-323">Skriv-debug</span><span class="sxs-lookup"><span data-stu-id="51afa-323">Write-Debug</span></span>](Write-Debug.md)
<span data-ttu-id="51afa-324">Skriver ett fel söknings meddelande till-konsolen.</span><span class="sxs-lookup"><span data-stu-id="51afa-324">Writes a debug message to the console.</span></span>

### [<span data-ttu-id="51afa-325">Skriv-fel</span><span class="sxs-lookup"><span data-stu-id="51afa-325">Write-Error</span></span>](Write-Error.md)
<span data-ttu-id="51afa-326">Skriver ett objekt till fel strömmen.</span><span class="sxs-lookup"><span data-stu-id="51afa-326">Writes an object to the error stream.</span></span>

### [<span data-ttu-id="51afa-327">Skriv värd</span><span class="sxs-lookup"><span data-stu-id="51afa-327">Write-Host</span></span>](Write-Host.md)
<span data-ttu-id="51afa-328">Skriver anpassade utdata till en värd.</span><span class="sxs-lookup"><span data-stu-id="51afa-328">Writes customized output to a host.</span></span>

### [<span data-ttu-id="51afa-329">Skriv information</span><span class="sxs-lookup"><span data-stu-id="51afa-329">Write-Information</span></span>](Write-Information.md)
<span data-ttu-id="51afa-330">Anger hur PowerShell hanterar informations Ströms data för ett kommando.</span><span class="sxs-lookup"><span data-stu-id="51afa-330">Specifies how PowerShell handles information stream data for a command.</span></span>

### [<span data-ttu-id="51afa-331">Skriva-utdata</span><span class="sxs-lookup"><span data-stu-id="51afa-331">Write-Output</span></span>](Write-Output.md)
<span data-ttu-id="51afa-332">Skickar de angivna objekten till nästa-kommando i pipelinen.</span><span class="sxs-lookup"><span data-stu-id="51afa-332">Sends the specified objects to the next command in the pipeline.</span></span> <span data-ttu-id="51afa-333">Om kommandot är det sista kommandot i pipelinen visas objekten i-konsolen.</span><span class="sxs-lookup"><span data-stu-id="51afa-333">If the command is the last command in the pipeline, the objects are displayed in the console.</span></span>

### [<span data-ttu-id="51afa-334">Skriv förlopp</span><span class="sxs-lookup"><span data-stu-id="51afa-334">Write-Progress</span></span>](Write-Progress.md)
<span data-ttu-id="51afa-335">Visar en förlopps indikator i ett PowerShell-kommando fönster.</span><span class="sxs-lookup"><span data-stu-id="51afa-335">Displays a progress bar within a PowerShell command window.</span></span>

### [<span data-ttu-id="51afa-336">Skriv-verbose</span><span class="sxs-lookup"><span data-stu-id="51afa-336">Write-Verbose</span></span>](Write-Verbose.md)
<span data-ttu-id="51afa-337">Skriver text till data strömmen för utförliga meddelanden.</span><span class="sxs-lookup"><span data-stu-id="51afa-337">Writes text to the verbose message stream.</span></span>

### [<span data-ttu-id="51afa-338">Skriv varning</span><span class="sxs-lookup"><span data-stu-id="51afa-338">Write-Warning</span></span>](Write-Warning.md)
<span data-ttu-id="51afa-339">Skriver ett varnings meddelande.</span><span class="sxs-lookup"><span data-stu-id="51afa-339">Writes a warning message.</span></span>
